--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="api_key">ADD API KEY HERE</string>
+    <string name="api_key">YOUR API KEY HERE</string>
     <string name="search_keyword">Search keyword</string>
     <string name="sort">SORT</string>
     <string name="name">name</string>
